--- a/Demo/addons/COMS/plugin.cfg
+++ b/Demo/addons/COMS/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Collision Object Mouseover System"
 description="Highlight CollisionObjects on mouseover"
-author="CLAYMORE"
+author="Nathan Frank"
 version="1.0.0"
 script="COMS.gd"
